# open-ad-toolkit

./: .gitignore  .pep8  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .travis.yml  Common_Client_Intro.ipynb  Deep_Search.ipynb  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README--PYPI.md  README-PYPI.md  README-alt.md  README-bkp.md  README.md  README_ai-assistant.md  README_commands.md  README_developers.md  README_getting-started.md  README_installation.md  README_models-service.md  README_plugins--OLD.md  README_plugins--new.md  README_plugins.md  README_plugins_development.md  Slide_Show.ipynb  Table_of_Contents.ipynb  Untitled 2.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  __init__.py  adccl  adccl-jupyter  adccl.ipynb  commands.md  demo.ipynb  global_var_lib.py  (+20 more)
.github/workflows/: openadcidi.yaml
README/: README--PYPI.md  README_ai-assistant.md  README_commands.md  README_developers.md  README_getting-started.md  README_installation.md  README_models-service.md  README_plugins.md  README_pypi.md  ai-assistant.md  developers.md  getting-started.md  installation.md  models-service.md  plugins.md
_for_testing/: Demonstration.ipynb  README.txt  all_commands.ipynb  all_commands.txt  ds-auth.ext-v2.json  func_display_collection.json  sample_data.csv  table_testing.py  test_all_command.ipynb  test_everything 2.ipynb  test_everything.ipynb  toolkits_help.ipynb
_for_testing/_archive/: all_commands.txt  toolkits_help.ipynb
_for_testing/runs/: all 2.run  filesystem.run  general.run  gui.run  help.run  help_filesystem.run  help_general.run  help_help.run  help_molecules.run  help_runs.run  help_tk_demo 2.run  help_tk_demo.run  help_tk_ds4sd.run  help_tk_rxn.run  help_toolkits.run  help_util.run  help_workspaces.run  llm.run  molecules.run  tk_demo.run  tk_ds4sd 2.run  tk_ds4sd.run  tk_rxn.run  toolkits.run  util 3.run  workspaces.run
_for_testing/test_files/: sample.csv  sample_config.json
ad4e-venv/: pyvenv.cfg
ad4e_opentoolkit/app/: __init__.py  adccl_examples.py  global_var_lib.py  init_magic.py  login_manager.py  main.py  main_lib--trash.py  main_lib.py  memory.py  metadata.json  openad_examples.py  params.json
ad4e_opentoolkit/core/: __init__.py  grammar.py  help.py  lang_dev.py  lang_file_system.py  lang_mols--bkp.py  lang_mols--bkp2.py  lang_mols.py  lang_runs.py  lang_sessions_and_registry.py  lang_various.py  lang_workspaces.py
ad4e_opentoolkit/edit_json/: __init__.py  edit_json.py  editor_style_parser.py
ad4e_opentoolkit/examples/: base_molecules.sdf
ad4e_opentoolkit/flask_apps/: launcher.py  readme.txt
ad4e_opentoolkit/flask_html/: launcher.py  test.html  test_launcher.py
ad4e_opentoolkit/helpers/: __init__.py  ascii_type.py  credentials.py  general.py  output.py  output_content.py  output_msgs.py  spinner.py  splash.py  style_parser.py
ad4e_opentoolkit/llm_assist/: __init__.py  llm_interface.py  prime_chat.py
ad4e_opentoolkit/notebooks/: Common_Client_Intro.ipynb  Common_Client_Terminal.ipynb  Deep_Search.ipynb  Demonstration.ipynb  Flask app demo.ipynb  RXN Demonstration.ipynb  Table_of_Contents.ipynb  Terminal_Demo.ipynb  Testing.ipynb  all_commands.ipynb  all_commands.txt  demo.ipynb  mols2grid-demo.ipynb  openad.ipynb  rxn.ipynb
ad4e_opentoolkit/toolkit/: __init__.py  toolkit_main.py
core/: __init__.py  grammar.py  help.py  lang_file_system.py  lang_mols.py  lang_runs.py  lang_sessions_and_registry.py  lang_workspaces.py
docs/: README.md  base_commands.html  base_concepts.html  copy_docs.py  generate-docs.py  generate_docs.py  getting_started.html  toolkit_ds4sd.html  toolkit_gt4sd.html  toolkit_rxn.html  toolkit_st4sd.html
docs--trash/: base_commands.html  base_concepts.html  getting_started.html  toolkit_ds4sd.html  toolkit_gt4sd.html  toolkit_rxn.html
docs/input/: ai-assistant.md  base-concepts.md  commands.md  developers.md  getting-started.md  index.md  installation.md  models-service.md  plugins.md
docs/markdown/: commands.md  installation.md
docs/source/: about_context.txt  about_mws.txt  about_plugin.txt  about_run.txt  about_workspace.txt  description.txt
docs/static/: about_openad.txt
docs/sub_pages/: sub_page.css
edit_json/: __init__.py  edit_json.py
edit_json/demo/: demo.json
examples/: gt4sd_config.json
examples/models_api/: README.md
flask_html/css/: main.css
flask_html/molsviewer/: index.html
helpers/: ascii_type.py  general.py  output.py  spinner.py  splash.py  style_parser.py
homepage/: homepage.css  readme.txt
int/: int_main.py
llm_assist/: llm_interface.py  prime_chat.py
magic/: adccl.py
notebooks/: Common_Client_Terminal.ipynb  Deep_Search.ipynb  Table_of_Contents.ipynb  adccl.ipynb  all_commands.ipynb  all_commands.txt  mols2grid-demo.ipynb
notebooks_test/: Common_Client_Intro.ipynb  Deep_Search.ipynb  Demonstration.ipynb  End_to_End.ipynb  Generation_Models.ipynb  RXN Demonstration.ipynb  Slide_Show.ipynb  _style_reference.ipynb  property_generation.ipynb
openad/: Untitled.ipynb  __init__.py  api.py  ollama_setup.yaml  openad_api.py
openad-gui/: index.html
openad-gui/assets/: BreadCrumbs-5PNbBUT3.js  DataViewer-G8_DFRVZ.js  DataViewer-ZtCYsNGT.css  FileBrowser--bkp1-IhLi9evL.css  FileBrowser--bkp1-pR_W4TiZ.js  FileBrowser-5hGGxxPe.js  FileBrowser-HS_RJEyF.js  FileBrowser-Op8rQF39.css  FileBrowser-bkp2-KUo9A2O8.js  FileBrowser-bkp2-P9xUSNq6.css  FileBrowser-pitN2NoF.css  JsonViewer-HcHApHQn.css  JsonViewer-L2OceR16.js  JsonViewer.vue_vue_type_script_setup_true_lang-4fSEEgnR.js  KitchenSink-9IYRCjRc.js  ModalMain-tSf-MJlS.js  ModalMolPreview-l48ECDTB.js  ModuleA-3PP5naUb.js  ModuleA-6ywRJ9V2.css  ModuleA-F4Tgg37o.css  ModuleA-OMcDRdTj.js  ModuleA-cWqGwqpg.js  ModuleA-ifqjERw1.css  ModuleB-48U0Yw_P.css  ModuleB-DuZpFwNY.css  ModuleB-I66lqW-g.css  (+44 more)
readme/: ai-assistant.md  developers.md  getting-started.md  installation.md  models-service.md  models.md  plugins.md
stylesheets/: stylesheet.css
tests/: helpers.py  openad_api_test.py
toolkit/: __init__.py  toolkit_main.py
tutorials/: molecules.md
venv-temp/: pyvenv.cfg
venv2/: pyvenv.cfg
(+3439 files in other folders)
