[tool.poetry]
name = "openad"
version = "0.1.4"
description = "Open Accelerated Discovery Client "
authors = ["Phil Downey <phil.downey1@ibm.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://www.accelerate.science/"
documentation = "https://acceleratedscience.github.io/open-ad-toolkit/"
repository = "https://github.com/acceleratedscience/open-ad-toolkit"

keywords= ["deepsearch", "rxn","jupyter","magic commands","accelerated Discovery","science","retrosynthesis"]
classifiers = [
    "Operating System :: OS Independent",
   'Development Status :: 4 - Beta',
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10"
]
[project.urls]

[tool.black]
line-length=120

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
joblib = "^1.3.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
blessed = "^1.20.0"
flaky = "3.7.0"
flask = "3.0.0"
flask-bootstrap = "3.3.7.1"
geckodriver-autoinstaller = "0.1.0"
halo = "0.0.31"
imagehash = "4.3.1"
ipython = "8.12.0"
ipywidgets = "7.7.5"
jinja2 = "3.1.2"
npm = "^0.1.1"
nodejs = ">=0.1.1"
numerize = "0.12"
numpy = "1.24.2"
pandas = "2.0.0"
protobuf = "3.20.3"
pubchempy = "1.0.4"
py3dmol = "^2.0.4"
pyjwt = "2.8.0"
pyparsing = "3.0.9"
pytest = "7.3.1"
rdkit = "2023.3.2"
rdkit-pypi = "2022.9.5"
streamlit = "1.22.0"
tqdm = "4.65.0"
traitlets = "5.9"
mols2grid = "^2.0.0"
deepsearch-toolkit = "^0.29.0"
tiktoken = "^0.5.1"
rxn4chemistry = "^1.11.0"
tabulate = "0.8.9"
faiss-cpu = "^1.7.4"
openai = "^0.28.1"
coverage = "^7.3.2"
langchain = "0.0.325"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
pyperclip =  ">=1.8.2"
jupyter_client = "8.2.0"
jupyter_core = "5.3.0"
jupyter_server = "2.7.2"
jupyterlab = "3.5.3"
nbclient = "0.7.3"
nbconvert = "7.3.1"
nbformat = "5.8.0"
notebook = "6.5.4"

[tool.poetry.scripts]
openad = "openad.app.main:cmd_line"
init_magic = "openad.app.init_magic:init_magic"
init_examples = "openad.app.openad_examples:openad_create_examps"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.331"
black = "^23.9.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
