[tool.poetry]
name = "openad"
version = "0.7.1"

description = "Open Accelerated Discovery Client"
authors = ["Phil Downey <phil.downey1@ibm.com>"]
readme = "README/README_pypi.md"
license = "MIT"
homepage = "https://www.accelerate.science/"
documentation = "https://acceleratedscience.github.io/openad-docs/"
repository = "https://github.com/acceleratedscience/open-ad-toolkit"

keywords= ["deepsearch", "rxn","jupyter","magic commands","accelerated Discovery","science","retrosynthesis"]
classifiers = [
    "Operating System :: OS Independent",
   'Development Status :: 4 - Beta',
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11"
]

[tool.black]
line-length=120

[tool.poetry.dependencies]
# temproary due to build issue in container
orjson = "3.10.3"

python = ">=3.10,<3.12"
setuptools = "75.8.0"
blessed = "^1.20.0"
flask = "3.0.0"
flask-bootstrap = "3.3.7.1"
geckodriver-autoinstaller = "0.1.0"
halo = "0.0.31"
ipython = "8.15.0"
ipywidgets = "7.8.2"
npm = "^0.1.1"
nodejs = ">=0.1.1"
numpy = "^1.26.2"
pandas = "2.0.0"
pubchempy = "1.0.4"
py3dmol = "^2.0.4"
pyparsing = "3.0.9"
pyjwt = "2.8.0"
rdkit = "^2024"
tqdm = "4.66.1"
deepsearch-toolkit = "^0.35.0"
rxn4chemistry = "^1.11.0"
tabulate = "0.8.9"
tiktoken = ">=0.5.2"
faiss-cpu = "^1.7.4"
#openai = "0.27.10"
coverage = "^7.3.2"
ibm-generative-ai  = "^2.3.0"
langchain = "0.3.15"
langchain-community = "0.3.1"
langsmith  =  "0.1.131"
langchain-text-splitters ="0.3.5"
langchain_huggingface="0.1.2"
ipykernel = "6.27.1"
pyperclip =  ">=1.8.2"
jupyter_client = "7.4.9"
jupyter_core = "5.3.1"
jupyter_server = "2.7.3"
jupyterlab_server  = "2.27.2"
jupyterlab = "3.6.6"
jupyterlab-widgets  =  "1.1.8"
widgetsnbextension  =  "3.6.7"
nbclient = "0.8.0"
nbconvert = "7.8.0"
nbformat = "5.9.2"
notebook = "6.5.6"
#ibm-generative-ai = "2.0.0"
#sentence-transformers = "2.2.2"
servicing = "0.0.12"
# servicing = { git = "https://github.com/acceleratedscience/servicing.git", branch = "config_extend" }
skypilot = {version="^0.6.0", extras = ["aws", "kubernetes"] }
filelock = "^3.14.0"
tomlkit = "^0.12.4"
flask-cors = "^4.0.0"
websockets = "^12.0"
asyncio = "^3.4.3"
ijson = "^3.2.3"
biopython = "^1.84"

gemmi = "^0.6.6"
[tool.poetry.scripts]
openad = "openad.app.main:cmd_line"
init_magic = "openad.app.init_magic:init_magic"
init_examples = "openad.app.openad_examples:openad_create_examps"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.331"
black = "^23.9.1"

[tool.poetry.group.test.dependencies]
pytest = "8.1.1"
pytest-cov = "^5.0.0"
pytest-dependency = "^0.6.0"

[tool.poetry.group.typing.dependencies]
mypy = "1.9.0"

[tool.mypy]
files = "tests"
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.pytest.ini_options]
#addopts = "--cov=openad/openad_model_plugin"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 120
src = ["openad/openad_model_plugin"]
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
ignore = [
    "E722", # Do not use bare `except`
    "F401", # imported but unused
]
